--- a/packages/front/test-web/index.html
+++ b/packages/front/test-web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title new</title>
+    <title>Title new again</title>
 </head>
 <body>
     
